# content-server

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml
configs/: config_vars.yaml  static_config.yaml
deploy/: start.sh
nginx/: example.conf
src/: main.cpp
src/auth/: auth_bearer.cpp  auth_bearer.hpp
src/handlers/upload/: upload_del.cpp  upload_del.hpp  upload_post.cpp  upload_post.hpp
src/utils/: jwt.cpp  jwt.hpp
